package oop.beispiel;

import java.awt.Graphics;

/**
 * Die Schnittstelle
 */

public interface Drawable {
	public void draw(Graphics zeichenflaeche);
}